# stm32f746_disco-project

./: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  code.code-workspace  extensions.txt  linker-heap_4.ld  linker-heap_5.ld  stm32f746xg_flash.ld
FreeRTOS/portable/GCC/ARM_CM7/r0p1/: port.c
Inc/: FreeRTOSConfig.h  lv_conf.h  stm32f7xx_hal_conf.h
Src/: main.c
Startup/: startup_stm32f746xx.S
Sys/: stm32f7xx_freertos_tick.c  stm32f7xx_hal_tick.c  stm32f7xx_it.c  syscall.c  sysmem.c  system_stm32f7xx.c
example/freertos/Src/: main.c
example/hello-world-uart/Src/: main.c
